fix youtube section on mobile

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -860,11 +860,7 @@
       .video {
         border-radius: 15px;
       }
-    }
-  }
-  .youtube-playlist-bg {
-    .youtube-video-link {
-      .youtube-playlist-btn {
+      .yt-icon{
         display: none !important;
       }
     }
